outputs/csi500-test/treevoo/2025-07-28_01-48-42/problem_iter29_response9.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 53
    return df[['sum_price_change_10d', 'avg_price_change_20d', 'diff_ma_high_low_10d', 'ratio_high_30d',
              ^
SyntaxError: '[' was never closed
